//grpc/proto/dbstatus.proto
syntax = "proto3";
option go_package = "./proto";
package proto;

import "google/protobuf/timestamp.proto";

service DatabaseStatusService {
    rpc SendStatus (DatabaseStatus) returns (DatabaseStatusResponse);
}

service ClientInfoService {
    rpc GetClientInfo (ClientInfoRequest) returns (ClientInfoResponse);
}

message DatabaseStatus {
    string ip = 1;
    int32 port = 2; // 确保与ClientInfo中的port类型匹配
    string dbtype = 3;
    string dbnm = 4;
    string checkNm = 5;  // 检查名称
    string checkResult = 6; // 检查结果
    string details = 7;
    google.protobuf.Timestamp timestamp = 8;
}

message DatabaseStatusResponse {
    string message = 1;
}

message ClientInfoRequest {
    string DbType = 1; // 使用dbtype作为请求参数
}

message ClientInfoResponse {
    repeated ClientInfo clientInfos = 1;
}

message ClientInfo {
    string Ip = 1;
    int32 Port = 2;
    string DbType = 3;
    string DbName = 4;
    string DbUser = 5;
    string UserPwd = 6;
    bool IsEnable = 7;
}

